# syncr

./: README.md  pyproject.toml  sync.py
syncr/: __init__.py  cli.py  config.py  sync.py  watcher.py
