[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syncr"
version = "0.1.0"
description = "Local → Server file sync tool for ML development"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "paramiko>=3.0",
    "watchdog>=3.0",
    "rich>=13.0",
    "toml>=0.10",
]

[project.scripts]
syncr = "syncr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["syncr"]
